# payment-service

./: .coveragerc  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 4ad34e642c34_initial_migration.py
src/: application.py  consumer.py  main.py
src/adapters/rabbitmq/: client.py
src/clients/producer/: payment_dto.py  rabbitmq_producer.py
src/core/config/: __init__.py  api.py  base.py  database.py  rabbitmq.py  server.py
src/core/fastapi/: error.py  mapper.py  routes.py  security.py
src/db/: base.py  base_repository.py  base_uow.py  connection.py  transaction.py
src/dependency/: container.py  uow_container.py  use_case_container.py
src/modules/healthcheck/infrastructure/: dto.py
src/modules/healthcheck/usecase/: __init__.py
src/modules/healthcheck/usecase/check_health/: api.py  impl.py
src/modules/healthcheck/usecase/check_readiness/: api.py  impl.py
src/modules/outbox/domain/aggregate/: model.py
src/modules/outbox/infrastructure/: dto.py  entity.py  mapper.py  repository.py  uow.py
src/modules/outbox/usecase/: __init__.py
src/modules/outbox/usecase/process_outbox/: api.py  impl.py
src/modules/payment/infrastructure/: dto.py  entity.py  mapper.py  repository.py  uow.py
src/modules/payment/usecase/: __init__.py
src/modules/utils/: enums.py
tests/: conftest.py
tests/integration/: test_api_healthcheck.py
tests/unit/: test_domain_payment.py  test_healthcheck_usecase.py
(+8 files in other folders)
